--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Yossi_Yael_Will_Artur/indexOwner.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Yossi_Yael_Will_Artur/indexOwner.html
@@ -43,7 +43,7 @@
     <hr>
     <div id="rootItems"></div>
     <hr>
-    <script src="dist/indexOwner.js"></script>
+    <script src="dist/indexAll.js"></script>
 </body>
 
 </html>
