--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Yossi_Yael_Will_Artur/indexStore.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Yossi_Yael_Will_Artur/indexStore.html
@@ -61,6 +61,6 @@
     <div id="rootItemsStore"></div>
     <div class="imgBottom"></div>
     <div class="footer"></div>
-    <script src="dist/indexOwner.js"></script>
+    <script src="dist/indexAll.js"></script>
 </body>
 </html>
