--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/rasheed-gucci-/womenGucci.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/rasheed-gucci-/womenGucci.html
@@ -121,7 +121,7 @@
             <select class="catergory__buttons--selector" onchange='handleSelect(event)'>
                 <option value="" disabled selected>Choose a type</option>
                 <option value="all">ALL</option>
-                <option value="dresses">Dresses</option>
+                <option value="dresses">DRESSES</option>
                 <option value="pants">PANTS</option>
                 <option value="shirts">SHIRT</option>
             </select>
