--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/rasheed-gucci-/index.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/rasheed-gucci-/index.html
@@ -48,7 +48,7 @@
 
             </div>
             <ul>
-                <a href="" class="container__navBar__catergory" class="women"> WOMEN </a>
+                <a href="womenGucci.html" class="container__navBar__catergory" class="women"> WOMEN </a>
                 <a href="" class="container__navBar__catergory">CHILDREN </a>
                 <a href="" class="container__navBar__catergory">MEN</a>
                 <a href="" class="container__navBar__catergory">WATCHES</a>
