--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Etan Omri John/bokkie.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Etan Omri John/bokkie.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
     <script src="https://kit.fontawesome.com/01fab75280.js" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
+
 <body>
     <div class="wrapper">
         <div class="navBar">
@@ -15,19 +17,40 @@
             <div class="navBar__logo">Bookie</div>
             <div class="navBar__item"><i class="fas fa-shopping-cart"></i></div>
             <div class="navBar__item"><i class="fas fa-map-marker-alt"></i></div>
-            <div class="navBar__item"><i class="fas fa-search"></i>
-
-            </div>
+            <div class="navBar__item"><i class="fas fa-search"></i></div>
         </div>
-        <div class="banner"><img src="https://upload.wikimedia.org/wikipedia/commons/2/2c/Nm_toronto_university_of_toronto_library.jpg" alt=""></div> 
+        <div class="banner"><img src="mhGxJUu.jpg" alt=""></div>
         <div class="filters">
-            <div class="filters__category"></div>
-            <div class="filters__filters"></div>
-            <div class="filters__sortBy"></div>
+            <button class="btn">Category <i class="fas fa-sort-down"></i></button>
+            <div class="category">
+                <a href="#">Li</a>
+                <a href="#"></a>
+                <a href="#"></a>
+            </div>
+            <button class="btn">Category <i class="fas fa-sort-down"></i></button>
+            <div class="category">
+                <a href="#">Link 1</a>
+                <a href="#"></a>
+                <a href="#"></a>
+            </div>
+            <button class="btn">Category <i class="fas fa-sort-down"></i></button>
+            <div class="category">
+                <a href="#">Link 1</a>
+                <a href="#">Link 2</a>
+                <a href="#"></a>
+            </div>
         </div>
         <div class="rootBooks"></div>
         <div class="secondaryNav"></div>
     </div>
+
+
+    
+
+    <div class="filters__category">Category <i class="fas fa-sort-down"></i></div>
+    <div class="filters__filters">Filters <i class="fas fa-sort-down"></i></div>
+    <div class="filters__sortBy">Sort by <i class="fas fa-sort-down"></i></div>
     <script src="dist/bokkie.js"></script>
 </body>
+
 </html>
