--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Or_Jenia_Misha/index.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Or_Jenia_Misha/index.html
@@ -170,7 +170,7 @@
 
             <div class="popmenu__x"><i class="fas fa-times"></i></div>
 
-            <div class='popmenu__box' id="root">
+            <div class='popmenu__box'>
 
                 <div class="popmenu__box__opacity">
 
@@ -199,7 +199,7 @@
                         <div>Maki Sushi</div>
                     </div>
 
-                    <div class="popmene__box__grid"></div>
+                    <div class="popmenu__box__grid" id="root"></div>
 
                 </div>
 
