erasing old html

--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/rasheed-gucci-/erp.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/rasheed-gucci-/erp.html
@@ -19,7 +19,7 @@
     <form onsubmit="handleAddItems(event)">
         <input id="itemName" type="text" name="name" placeholder="item-name">
         <input id="price" type="number" name="price" placeholder="item-price">
-        <input type="text" name="img" id="img">
+        <input type="text" name="img" id="img" placeholder="img-top">
         
         <select id="selectDepartment">
             <option value="" disabled selected>Choose a department</option>
