--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/rasheed-gucci-/womenGucci.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/rasheed-gucci-/womenGucci.html
@@ -127,8 +127,8 @@
             </select>
 
             <div class="catergory__buttons--sortPrice">
-                <button type="button" id="ascending" onclick="handlePriceAsc()">Sort by highest to lowest</button>
-                <button type="button" id="descending" onclick="handlePriceDesc()">Sort by lowest to highest</button>
+                <button type="button" id="ascending" onclick="handlePriceAsc(event)">Sort by highest to lowest</button>
+                <button type="button" id="descending" onclick="handlePriceDesc(event)">Sort by lowest to highest</button>
             </div>
 
             <div class="catergory__buttons--lowerThanPrice">
