--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Room2/customer.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Room2/customer.html
@@ -5,27 +5,59 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>Customer</title>
+    <link rel="icon" href=images/adidasLogo.png type="image/x-icon">
+
     <link rel="stylesheet" href="dist/style.css" />
     <script src="https://kit.fontawesome.com/01fab75280.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <div class="header">
-        <div class="header__logo"><img src="images/adidasLogo.png" alt="" /></div>
-        <div class="header__nav">
-            <a href="">MEN</a>
-            <a href="">WOMEN</a>
-            <a href="">KIDS</a>
+        <div class="usp__bar">
+            <div class="usp__bar--item">
+                <p>NEW STYLES ADDED - UP TO 40% OFF</p>
+            </div>
+            <div class="usp__bar--item">
+                <p>FREE STANDARD SHIPPING & RETURNS | JOIN NOW</p>
+            </div>
+            <div class="usp__bar--item">
+                <p>GIVE OUT-OF-USE GEAR NEW LIFE & GET REWARDED</p>
+            </div>
         </div>
-        <form action="" class="header__searchBar">
-            <input type="text" placeholder="Search.." name="search" />
-            <button type="submit"><i class="fa fa-search"></i></button>
-        </form>
-        <div class="header__cart">
-            <button onclick="handleCart(event)">icon</button>
+        <div class="header__inner">
+            <div class="header__inner--logo"><img src="images/adidasLogo.png" alt="" /></div>
+            <div class="header__inner--nav">
+                <a class="nav__item--man" href="">MEN</a>
+                <div class="dropdown-men">
+                    <a href="#">Link 1</a>
+                    <a href="#">Link 2</a>
+                    <a href="#">Link 3</a>
+                </div>
+                <a href="">WOMEN</a>
+                <a href="">KIDS</a>
+            </div>
+            <div class="header__inner--searchBar">
+                <input type="text" placeholder="Search.." name="search" />
+                <i class="fa fa-search"></i>
+            </div>
+            <div class="header__inner__side--menu">
+                <div class="profile__item">
+                    <i class="far fa-user-circle"></i>
+                </div>
+                <div class="wishlist__item">
+                    <i class="far fa-heart"></i>
+                </div>
+                <div class="cart__item">
+                    <i onclick="handleCart(event)" class="fas fa-shopping-bag"></i>
 
+                </div>
+            </div>
         </div>
+
+
+
     </div>
 
     <div class="breadCrumbs">
@@ -44,13 +76,13 @@
 
             <option value="priceRange">
                 price range
-                </option>
+            </option>
         </select>
 
         <select onchange="handleShoeSize(event)">
             <option value="" disabled selected>shoe</option>
 
-            <option value="shoeSize" >
+            <option value="shoeSize">
                 shoe size
                 <input type="range">
             </option>
@@ -77,7 +109,7 @@
             <option value="boots"> </option>
             <option value="hi tops"> </option>
             <option value="flip flops"> </option>
-    
+
         </select>
         <select onchange="handleSort(event)">
             <option value="" disabled selected>sort</option>
