--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/andrew, noa , tamir/index.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/andrew, noa , tamir/index.html
@@ -31,8 +31,9 @@
         <div class="header__wrapper">
             <div class="header__wrapper__item">FAV</div>
             <div class="header__wrapper__item">ACCOUNT</div>
-            <div class="header__wrapper__item">CART</div>
+            <div class="header__wrapper__item" id="cart-icon">CART</div>
         </div>
+        <div class="header__cart-notification">0</div>
     </div>
     <div class="currency-selector">
         <p>Please choose your prefered currency:</p>
