--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/chaim , michael ido/taskFilter.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/chaim , michael ido/taskFilter.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <div class="main">
-        <h1 class="main-header">Zap</h1>
-        
+        <h1 class="main-header">jumm</h1>
+
         <form class="main_form" onsubmit='display(event)'>
 
                 <select class="main_form-selectCatagory" name="Catagory" id="selectCatagory">
