--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/rasheed-gucci-/index.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/rasheed-gucci-/index.html
@@ -111,11 +111,143 @@
 
         </div>
 
-        <div class="dropdawn"></div>
-        <div class="dropdawn"></div>
-        <div class="dropdawn"></div>
-        <div class="dropdawn"></div>
-        <div class="dropdawn"></div>
+     <!-- 
+        <div class="container__children">
+            <div class="baby">
+                <h5>BABY (0-36 month)</h5>
+                <p>View all</p>
+                <p>Newborn</p>
+                <p>Girls ()</p>
+                <p>Boys</p>
+                <p>Baby Shoes</p>
+                <p>Toddler Shoes</p>
+                <p>Special Occasion</p>
+            </div>
+            <div class="girls">
+                <h5>GIRLS (4 - 12 YEARS)</h5>
+                <p>View all</p>
+                <p>Clothing</p>
+                <p>Shoes</p>
+                <p>Bags & Backpacks</p>
+                <p>Balts</p>
+                <p>Soft Accessories</p>
+                <p>Special Occasion</p>
+            </div>
+            <div class="boys">
+                <h5>BOYS (4 - 12 YEARS)</h5>
+                <p>View all</p>
+                <p>Clothing</p>
+                <p>Bags & Backpacks</p>
+                <p>Balts</p>
+                <p>Soft Accessories</p>
+                <p>Special Occasion</p>
+            </div>
+        </div> -->
+
+
+
+     <!-- <div class="container__men">
+            <div class="arrivals">
+                <h5>LASTEST ARRIVALS</h5>
+                <p>View all</p>
+                <p>Shop by Look</p>
+                <p>Valentine`s Day Gifts</p>
+            </div>
+            <div class="gifts">
+                <h5>GIFTS</h5>
+                <p>View all</p>
+                <p>Gifts for men</p>
+                <p>Personalized Gifts</p>
+                <p>Gucci Services</p>
+            </div>
+            <div class="bags">
+                <h5>BAGS</h5>
+                <p>View all</p>
+                <p>Backpacks</p>
+                <p>Messenger Bags</p>
+                <p>Tote Bags</p>
+                <p>Belt Bags</p>
+                <p>Buisness Bags</p>
+                <p>Portfolios</p>
+            </div>
+            <div class="shoes">
+                <h5>SHOES</h5>
+                <p>View all</p>
+                <p>Boots</p>
+                <p>Sneakers</p>
+                <p>Sandals</p>
+                <p>Driving Shoes</p>
+                <p>Ballet Flats</p>
+                <p>Lace Up Shoes</p>
+            </div>
+            <div class="accessories">
+                <h5>ACCESSORIES</h5>
+                <p>View all</p>
+                <p>Wallets</p>
+                <p>Chain Wallets</p>
+                <p>Tech Accessories</p>
+                <p>Scarves</p>
+                <p>Eyewaer</p>
+                <p>Hats & Cloves</p>
+            </div>
+        </div>
+
+
+
+
+        <div class="container__watches">
+            <div class="watches">
+                <h5>WATCES</h5>
+                <p>View all</p>
+                <p>For Men</p>
+                <p>For Women()</p>
+                <p>Gucci 25H Timepieces</p>
+                <p>Grip Watches</p>
+                <p>Grip Straps</p>
+            </div>
+        </div>
+
+
+
+
+        <div class="container__jewelry">
+            <div class="jewelry">
+                <h5>JUWELRY</h5>
+                <p>View all</p>
+                <p>Interlocking G Fine Necklace</p>
+                <p>Gucci Link to Love</p>
+                <p>For Women</p>
+                <p>Grip Watches</p>
+                <p>Rings</p>
+                <p>Bracelets</p>
+                <p>Earrings</p>
+                <p>Necklaces</p>
+            </div>
+        </div>
+
+
+
+        
+        <div class="container__handbags">
+            <div class="handbags">
+                <h5>HANDBAGS</h5>
+                <p>View all</p>
+                <p>Shop by Line</p>
+                <p>Gucci Bamboo 194</p>
+                <p>Gucci Diana</p>
+                <p>The Jackie 1961</p>
+                <p>Dionysus</p>
+            </div>
+            <div class="girls">
+                <p>GG Marmont</p>
+                <p>Tote Baga</p>
+                <p>Shoulder Bags</p>
+                <p>Crossbody Bags</p>
+                <p>Mini Bags</p>
+                <p>Clutches</p>
+                <p>Casual Bags</p>
+            </div>
+        </div> -->
 
 
 
