--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/rasheed-gucci-/womenGucci.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/rasheed-gucci-/womenGucci.html
@@ -120,10 +120,10 @@
             </div>
                     
 
-            <div class="catergory__buttons--lowerThanPrice">
-                <label>Show price lower than</label>
-                <input class="inputLowerThan" type='number' onkeyup="handleInput(event)" placeholder="number">
-            </div>
+             <div class="catergory__buttons--lowerThanPrice">
+                 <label>Show price lower than</label>
+                 <input class="inputLowerThan" type='number' onkeyup="handleFilterByPrice(event)" placeholder="number">
+             </div>
 
 
             <select class="catergory__buttons--selector" onchange='handleSelect(event)'>
