--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/rasheed-gucci-/index.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/rasheed-gucci-/index.html
@@ -278,10 +278,10 @@
         </div>
 
         <div class="container__main">
-            <img style="width: 100%;"
+            <img style="width: 100%; margin-bottom: 10em;"
                 src="https://media.gucci.com/content/HomepageVideoBackgroundStandard_1300x758/1636100137/HomepageVideoBackgroundStandard_Love-Parade-showspace-02_001_Default.jpg"
                 alt="">
-            <p style="font-size: 3em;  color: black;">STORIES</p>
+            <!-- <p style="font-size: 3em;  color: black;">STORIES</p> -->
         </div>
 
         <div class="container__stories">
@@ -302,7 +302,8 @@
                 </div>
             </div>
 
-            <div  style="margin-right: 1em;" class="stories__middle">
+            <div  style="margin-right: 1em; margin-top: -9.7em;" class="stories__middle">
+                <p style="font-size: 3em;  color: black; ">STORIES</p>
                 <img src="https://media.gucci.com/content/StyleNewsDoubleVertical_Standard_340x602/1635929154/StyleNewsDoubleVertical_Love-Parade-LOOK-01_001_Default.jpg"
                     alt="">
                 <p>Love Parade: The Looks</p>
