--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Or_Jenia_Misha/index.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Or_Jenia_Misha/index.html
@@ -23,7 +23,16 @@
     <section class='home'>
         <div class="homeopacity">
             <nav class="navbar">
-                <ul>
+                
+                <div class="burger">
+                    <div class="line1"></div>
+                    <div class="line2"></div>
+                    <div class="line3"></div>
+                </div>
+
+                <div class="mlogo"><img src="http://en.fusushi.co.il/warehouse/dynamic/55246.png" alt=""></div>
+
+                <ul class='navtags'>
                     <li>Home</li>
                     <li>About Us</li>
                     <li>Order Online</li>
@@ -35,6 +44,7 @@
                     <li>Gift Card</li>
                     <li class='smedia'><i class="fab fa-facebook"></i><i class="fab fa-instagram"></i></li>
                 </ul>
+
             </nav>
 
             <H1 class="home__title">ASIAN KITCHEN & SUSHI BAR</H1>
