--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/rasheed-gucci-/erp.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/rasheed-gucci-/erp.html
@@ -36,9 +36,9 @@
         </select>
         <select id="selectType">
             <option value="" disabled selected>Choose a type</option>
-            <option value="t-shirts">t-shirt</option>
-            <option value="pants">pants</option>
-            <option value="shoes">shoes</option>
+            <option value="t-shirts">shirt</option>
+            <option value="pants">dress</option>
+            <option value="shoes">pants</option>
             <option value="jewelry">jewelry</option>
             <option value="watches">watches</option>
             <option value="bags">bags</option>
