--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/andrew, noa , tamir/index.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/andrew, noa , tamir/index.html
@@ -114,7 +114,7 @@
             <p>45 mm</p>
             <p>46 mm</p>
             <p>47 mm</p>
-        </div>v
+        </div>
         <div class="filter-dropbar__group">
             <p>Beige</p>
             <p>Black</p>
