--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/yahia,michael,leon/owner.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/yahia,michael,leon/owner.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <form onsubmit="handleSubmit(event)" id="outfits">
-       <input type="text" required placeholder="Item" name="description">
+       <input type="text" required placeholder="Item" name="    ">
        <input type="number" required placeholder="Price" name="price">
        <input type="submit" value="submit">
     </form>
