--- a/02-JavaScript/10-localStorage/Example/index.html
+++ b/02-JavaScript/10-localStorage/Example/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="index.js"></script>
+    <div>Data id: <span id='dataRoot'></span></div>
+    <input type="number" name="number" id="" onkeyup="handleUpdateData(event)">
+    <button onclick='handleAddDataToStorage()'>Add data to storage</button>
+    <script src="dist/index.js"></script>
 </body>
 </html>
