--- a/02-JavaScript/07-DOM manipulations/Example/eliya,marina,ohad/index.html
+++ b/02-JavaScript/07-DOM manipulations/Example/eliya,marina,ohad/index.html
@@ -10,9 +10,10 @@
 </head>
 <body>
     <button class="btn" id="up">up</button>
-    <button class="btn" id="botom">botom</button>
+    <button class="btn" id="bottom">bottom</button>
     <button class="btn" id="right">right</button>
     <button class="btn" id="left">left</button>
-    <i class="em em-adult" aria-role="presentation" aria-label="ADULT"></i>
+    <i class="em em-adult" id="emoji" aria-role="presentation" aria-label="ADULT" style="position: relative;"></i>
+    <script src="dist/index.js"></script>
 </body>
 </html>
